--- a/business.html
+++ b/business.html
@@ -133,7 +133,7 @@
                 <h3 class="cumputersetac"><p>
 	          			
 	          			
-									대형폐기물에서 일반생활 가정폐기물처리 전문업체!
+									매립폐기물/소각폐기물/혼합폐기물 출장처리 전문업체!
                 </p></h3>
             </div>
 
