--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
  	<!-- Start Home One -->
 
 	
-<div class="home" id="sitemhome" style="background: url('/img/hero/headerimage9.jpg') no-repeat; background-size: cover;">
+<div class="home" id="sitemhome" style="background: url('/img/hero/headerimage35.jpg') no-repeat; background-size: cover;">
 	<div class="home-content">
 		<div class="container-fluid">
 			<div class="t-ce">
 				<h1>종로구폐기물</h1>
 				
 				
-				<p>신속 정확한 업무처리와 깔끔한 마무리! 책입지겠습니다.</p>
+				<p>친환경 폐기물처리 전문인력/차량 상시대기 중!</p>
 			</div>
 		</div>
 	</div>
