--- a/about.html
+++ b/about.html
@@ -108,9 +108,9 @@
                         		<p>
                         			
                         			
-															홈페이지 방문을 환영합니다.<br> 건설폐기물/생활폐기물 전문기업 종로구폐기물 입니다.<br>
-                							노련한 폐기물처리 전문인력들과 1톤/2.5톤/5톤집게차량들을 보유하고 있으므로 언제든 출장처리 가능합니다.<br>
-                							각종 폐기물처리 전문기업 종로구폐기물은 깨끗한 마무리와 경제적인 처리로 만족을 드릴것을 약속드립니다.
+															홈페이지 방문에 진심으로 감사드립니다.<br> 친환경 폐기물처리 전문기업 종로구폐기물 입니다.<br>
+                							건설/산업/생활폐기물처리 전문기업.<br>
+                							신속하고 저렴한 출장 폐기물처리 전문업체 종로구폐기물은 환경보전과 경비절감의 고객만족을 위해 최선을 다하고 있습니다.
                         		</p>
                         	</h3>
                         </center>
